// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Heading Component does not render when content is empty 1`] = `
<div>
  



</div>
`;

exports[`Heading Component renders with optional attributes 1`] = `
<div>
  


  
  <h3
    class="ct-heading ct-theme-dark custom-class"
    data-test="true"
  >
    Sample Heading
  </h3>
  

</div>
`;

exports[`Heading Component renders with required attributes 1`] = `
<div>
  


  
  <h2
    class="ct-heading ct-theme-light "
  >
    Sample Heading
  </h2>
  

</div>
`;
